deploy_k8s/teste-ingress-app/ingress-app1-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: grafana.developcloudit.com # Mude para o seu endereço
    http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
